<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="ucla_ieee">UCLA IEEE</string>
    <string name="app_name">ucla-ieee</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_sign_in">SignIn</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">UCLA IEEE</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_register_success">RegisterSuccessActivity</string>
    <string name="title_activity_event">EventActivity</string>
    <string name="long_sample_text">Summary text Summary text Summary text Summary text Summary text Summary text Summary text Summary text Summary text Summary text Summary text Summary text </string>
    <string name="sample_date_loc">X:XXpm in Boelter Hall 2444</string>
    <string name="sample_day_text">Events for XXX</string>
    <string name="next_reward">Next Reward</string>
    <string name="sample_points">500 points</string>
    <string name="events_attended">Events Attended</string>
    <string name="membership_details">Membership Details</string>
    <string name="sample_next_reward">You\'re next reward will be.. a surprise!</string>
    <string name="question_description">What is this?</string>
    <string name="no_events">Sorry, nothing\'s going on today!</string>
    <string name="sample_announcement">Lab cleanup Thursday at 7:00pm, pizza may or may not be involved. Lab cleanup
        Thursday at 7:00pm, pizza may or may not be involved. Lab cleanup Thursday at 7:00pm, pizza may or may not be involved</string>
    <string name="announcements">Announcements: </string>
    <string name="my_membership">Membership</string>
    <string name="calendar_events">Calendar</string>
    <string name="event_checkin">Event Check-In</string>
    <string name="settings">Settings</string>
    <string name="achievementText">Achievements</string>
    <string name="settings_desc">Settings gear</string>
    <string name="achievements_desc">Achievements bow</string>
    <string name="calendar_desc">Calendar icon</string>
    <string name="membership_desc">Membership icon</string>
    <string name="check_in_desc">Check in icon</string>
    <string name="test_email">rawrtan@gmail.com</string>
    <string name="test_name">Tania DePasquale</string>
    <string name="test_id">12938vdkja2189</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="no_attended_events">Sorry, you haven\'t checked into any events!</string>
    <string name="password">Password</string>
    <string name="error_incorrect_email">Email does not exist</string>
    <string name="new_password">New Password</string>
    <string name="cur_password">Current Password</string>
    <string name="retype_password">Re-Type Password</string>
    <string name="retype_new_password">Re-Type New Password</string>
    <string name="register">Register</string>
    <string name="ieee_logo">IEEE Logo</string>
    <string name="edit">edit</string>
    <string name="info">info</string>
    <string name="points">Points</string>
    <string name="title_activity_announcements">AnnouncementsActivity</string>
    <string name="checkin_desc">Check In icon</string>
    <string name="checkin_text">Check In</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_refresh">Refresh</string>
    <string name="points_title">Your Points</string>
    <string name="news_feed">NEWS FEED</string>
    <string name="points_preview">76.</string>
    <string name="title_activity_main_page">MainPage</string>
    <string name="refresh_button">Refresh button</string>
    <string name="undo_changes">Undo Changes</string>
    <string name="year">Year</string>
    <string name="attributions_list">&#8226; Bullhorn designed by Shane Miller from the thenounproject.com
    \n\n&#8226; Calendar (icon) designed by Laurent Patain from the thenounproject.com
    \n\n&#8226; Calendar widget created by Roomorama
    \n\n&#8226;Log Out designed by useiconic.com from the thenounproject.com
    \n\n&#8226;Question Mark designed by Mister Pixel from the thenounproject.com
    \n\n&#8226;Trophy designed by Juan Garces from the thenounproject.com
    \n\n&#8226;Star designed by Alex S. Lakas from the thenounproject.com
    \n\n&#8226;Map Marker designed by Dmitry Baranovskiy from the thenounproject.com
    \n\n&#8226;User designed by Richard Schumann from the thenounproject.com</string>
    <string name="how_to_get_points">&#8226; Signing up with this app (10 points)
        \n&#8226; Checking into events (15 points)
        \n&#8226; Starting a project
        \n&#8226; Finishing a project
        \n&#8226; Helping out IEEE\n</string>
    <string name="about_rewards">You can cash in any number of points to the webmaster by emailing
        webmaster@ieee.ucla.edu\n</string>
    <string name="what_rewards">
        &#8226; IEEE swag bag (150 points)
        \n&#8226; 1-2 Small mill boards (150 points)
        \n&#8226; 3D printing credit, 1 print up to 6 grams (50 points)
        \n&#8226; More to come!\n</string>
    <string name="banquet_prize">At the end of the year, the member who earned the most total points will become IEEE member of the
        year and get automatically invited to our end-of-the-year banquet!</string>
    <string name="questions_comments_concerns">Questions, comments, concerns, bugs?</string>
    <string name="direct_to_webmaster">Please direct these to IEEE\'s webmaster: webmaster@ieee.ucla.edu</string>
    <string name="attributions">Attributions</string>
    <string name="points_how_to">How to Get Points</string>
    <string name="rewards">Rewards</string>
    <string name="news_date">Jan 11</string>
    <string name="sample_time">XX:XXAM at IEEE Lab</string>
</resources>
