<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/caldroid_white"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_width="fill_parent"
            android:text="@string/points_how_to"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:lineSpacingExtra="4dp"
            android:text="@string/how_to_get_points"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_width="fill_parent"
            android:text="@string/rewards"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:autoLink="email"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="@string/about_rewards"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:lineSpacingExtra="4dp"
            android:text="@string/what_rewards"
            android:id="@+id/rewards_list"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="@string/banquet_prize"
            android:textStyle="italic"/>
    </LinearLayout>
</ScrollView>