<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:layout_width="match_parent"
              android:id="@+id/linearLayout"
              android:layout_height="match_parent">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:contentDescription="@string/ieee_logo"
            android:paddingBottom="@dimen/activity_vertical_margin"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:showDividers="beginning|middle"
            android:divider="?android:attr/dividerVertical">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="50dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:width="0dp"
                    android:layout_weight="0.3"
                    android:layout_gravity="center_vertical"
                    android:textStyle="bold"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="0dp"
                    android:layout_weight="0.6"
                    android:layout_gravity="center_vertical"
                    android:textSize="14sp"
                    android:layout_marginRight="10dp"
                    android:inputType="textEmailAddress"
                    android:visibility="gone"
                    android:id="@+id/memberEmail"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_email"
                    android:width="0dp"
                    android:layout_weight="0.6"
                    android:layout_gravity="center_vertical"
                    android:textSize="14sp"
                    android:layout_marginRight="10dp"
                    android:id="@+id/memberEmailText"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="50dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="0dp"
                    android:layout_weight="0.3"
                    android:text="@string/password"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"/>

                <TextView
                    android:editable="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="0dp"
                    android:layout_weight="0.6"
                    android:layout_gravity="center_vertical"
                    android:textSize="14sp"
                    android:layout_marginRight="10dp"
                    android:id="@+id/passwordText"
                    android:password="true"
                    android:textStyle="italic"/>

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:src="@android:drawable/ic_menu_edit"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/changePassword"
                    android:contentDescription="@string/edit"
                    android:visibility="gone"
                    android:background="@android:color/transparent"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="50dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:width="0dp"
                    android:layout_weight="0.3"
                    android:layout_gravity="center_vertical"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_name"
                    android:width="0dp"
                    android:layout_weight="0.6"
                    android:textSize="14sp"
                    android:layout_marginRight="10dp"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/memberNameText"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="0dp"
                    android:layout_weight="0.6"
                    android:layout_gravity="center_vertical"
                    android:textSize="14sp"
                    android:layout_marginRight="10dp"
                    android:inputType="textPersonName"
                    android:visibility="gone"
                    android:id="@+id/memberName"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="50dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="IEEE ID"
                    android:width="0dp"
                    android:layout_weight="0.3"
                    android:layout_gravity="center_vertical"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_id"
                    android:textSize="14sp"
                    android:layout_marginRight="10dp"
                    android:width="0dp"
                    android:layout_weight="0.6"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/memberIdText"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="0dp"
                    android:layout_weight="0.6"
                    android:layout_gravity="center_vertical"
                    android:textSize="14sp"
                    android:layout_marginRight="10dp"
                    android:inputType="textEmailAddress"
                    android:visibility="gone"
                    android:id="@+id/memberId"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="50dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/points"
                    android:width="0dp"
                    android:layout_weight="0.3"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="500 points"
                    android:width="0dp"
                    android:layout_weight="0.6"
                    android:layout_gravity="center_vertical"
                    android:textStyle="italic"
                    android:id="@+id/numPoints"/>

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:src="@android:drawable/ic_menu_info_details"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/aboutPoints"
                    android:contentDescription="@string/info"
                    android:background="@android:color/transparent"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.5"
                android:text="@string/undo_changes"
                android:textSize="18sp"
                android:layout_margin="5dp"
                android:background="@drawable/gradient_button"
                android:textColor="@color/caldroid_black"
                android:textStyle="bold"
                android:id="@+id/revertChanges"/>

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.5"
                android:text="@string/save"
                android:textSize="18sp"
                android:layout_margin="5dp"
                android:background="@drawable/gradient_button"
                android:textColor="@color/caldroid_black"
                android:textStyle="bold"
                android:id="@+id/saveChanges"/>


        </LinearLayout>


        <TextView
            android:background="@color/ucla_blue"
            android:id="@+id/textView3"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:text="@string/events_attended"
            android:textColor="@color/caldroid_white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="normal"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:id="@+id/noEventsView"
            android:text="You haven't attended any events!"
            android:gravity="center"/>
</LinearLayout>