<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_height="70dp"
              android:layout_marginTop="5dp"
              android:layout_width="fill_parent"
              android:orientation="vertical"
              android:paddingBottom="5dp"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="5dp">

    <LinearLayout
        android:layout_height="40dp"
        android:layout_width="fill_parent"
        android:orientation="horizontal">

        <TextView
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:id="@+id/summaryText"
            android:layout_gravity="center_horizontal"
            android:layout_height="40dp"
            android:layout_weight="0.9"
            android:layout_width="0dp"
            android:lines="2"
            android:singleLine="false"
            android:text="@string/long_sample_text"/>

        <ImageView
            android:contentDescription="@string/check_in_desc"
            android:id="@+id/eventCheckIn"
            android:layout_gravity="center_vertical"
            android:layout_height="40dp"
            android:layout_weight="0.1"
            android:layout_width="0dp"
            android:src="@android:drawable/ic_menu_myplaces"
            android:visibility="gone"/>

    </LinearLayout>

    <TextView
        android:ellipsize="end"
        android:gravity="right"
        android:id="@+id/locationText"
        android:layout_gravity="center_horizontal"
        android:layout_height="20dp"
        android:layout_width="fill_parent"
        android:singleLine="true"
        android:text="@string/sample_date_loc"
        android:textStyle="italic"/>
</LinearLayout>