<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:background="@color/caldroid_white"
              android:layout_height="match_parent"
              android:layout_width="match_parent"
              android:orientation="vertical"
              tools:context="com.ucla_ieee.app.MainActivity$PlaceholderFragment">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_width="fill_parent"
        card_view:cardBackgroundColor="@color/ucla_blue">
        <TextView
            android:gravity="center_horizontal"
            android:layout_height="150dp"
            android:layout_width="fill_parent"
            android:paddingTop="15dp"
            android:text="@string/points_title"
            android:textColor="@color/caldroid_white"
            android:textSize="40sp"
            android:textStyle="bold"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="-97dp"
        android:layout_width="wrap_content"
        card_view:cardBackgroundColor="@color/caldroid_gray">
        <TextView
            android:textColor="@color/dark_gray"
            android:gravity="center"
            android:id="@+id/numPoints"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:lines="1"
            android:padding="10dp"
            android:scrollbarFadeDuration="0"
            android:scrollbars="horizontal"
            android:text="9999/9999"
            android:textSize="60sp"
            />
    </android.support.v7.widget.CardView>

    <Space
        android:background="@color/caldroid_black"
        android:layout_height="10dp"
        android:layout_width="fill_parent"/>

    <RelativeLayout
        android:background="@color/ucla_blue"
        android:layout_height="35dp"
        android:layout_width="fill_parent">

        <TextView
            android:gravity="center"
            android:id="@+id/textView3"
            android:layout_gravity="center_vertical"
            android:layout_height="fill_parent"
            android:layout_marginLeft="10sp"
            android:layout_width="wrap_content"
            android:text="@string/news_feed"
            android:textColor="@color/caldroid_white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="normal"/>

        <ImageButton
            android:background="@color/caldroid_transparent"
            android:contentDescription="@string/refresh_button"
            android:id="@+id/refresh_button"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_vertical"
            android:layout_height="fill_parent"
            android:layout_width="wrap_content"
            android:scaleType="centerInside"
            android:src="@drawable/ic_action_refresh"/>
    </RelativeLayout>


    <ProgressBar
        android:id="@+id/refresh_process"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:visibility="gone"
        style="?android:attr/progressBarStyle"/>

    <ListView
        android:id="@+id/newsFeed"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

</LinearLayout>
